--- a/R68S.config
+++ b/R68S.config
@@ -21,3 +21,16 @@ CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_iw=y
 CONFIG_PACKAGE_iwinfo=y
 CONFIG_PACKAGE_wpad-wolfssl=y
+
+# Custom
+CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_nano=y
+CONFIG_PACKAGE_luci-app-acme=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
