--- a/R68S.config
+++ b/R68S.config
@@ -15,6 +15,7 @@ CONFIG_PACKAGE_wpad-wolfssl=y
 
 # Custom
 CONFIG_PACKAGE_autocore-arm=y
+CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_luci-app-acme=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-ddns=y
