--- a/R68S.config
+++ b/R68S.config
@@ -16,6 +16,9 @@ CONFIG_PACKAGE_wpad-wolfssl=y
 # Custom
 CONFIG_PACKAGE_autocore-arm=y
 CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
+CONFIG_PACKAGE_odhcpd-ipv6only=y
+CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_luci-app-acme=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-ddns=y
