--- a/R68S.config
+++ b/R68S.config
@@ -15,6 +15,7 @@ CONFIG_PACKAGE_wpad-wolfssl=y
 
 # Custom
 CONFIG_PACKAGE_autocore-arm=y
+CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
@@ -67,6 +68,7 @@ CONFIG_PACKAGE_luci-theme-material=y
 
 # Protocols
 CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
 
 # Editors
 CONFIG_PACKAGE_nano=y
