--- a/.github/workflows/R68S.yml
+++ b/.github/workflows/R68S.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: 91bc6bfd328b8135ec579cf372f735a49b6680a0
+  REPO_URL: https://github.com/Skyearn/lede
+  REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: R68S.config
   DIY_P1_SH: diy-part1.sh
